improve styling, refactor classes

--- a/src/app.css
+++ b/src/app.css
@@ -31,22 +31,20 @@ input {
 	font-size: inherit;
 	color: inherit;
 	padding: 0;
+	outline: none;
 }
 
 .button {
 	cursor: pointer;
 	background-color: var(--primary-color);
 	color: white;
-	padding: 0.4rem 1.25rem;
 	border-radius: 0.25rem;
 	outline-offset: 1px;
-	display: inline-flex;
-	justify-content: center;
+	padding: 0.3rem 0.6rem;
 }
 
-.button.small {
-	padding-inline: 0;
-	width: 2rem;
+.button.big {
+	padding: 0.4rem 1.2rem;
 }
 
 .button:hover {
