--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-	--primary-color: #f05;
+	--primary-color: #d04;
 	--primary-color-light: #f35;
 	--secondary-color: rgb(56, 104, 25);
 	--card-color: #171717;
@@ -70,4 +70,17 @@ input {
 
 .label {
 	color: var(--secondary-font-color);
+}
+
+.sr-only {
+	position: absolute;
+	left: -100vw;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
 }
